# django-simple-bulma

./: .coverage  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  azure-pipelines.yml  pyproject.toml  pytest.ini  renovate.json  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: check-submodules.yml  lint.yml  min-versions.yml  release.yml  security.yml  test.yml
bulma/: __init__.py  apps.py  bulma.css  bulma.css.map  bulma.sass  finders.py  settings.py
bulma/css/: bulma.css
bulma/js/: bulma-carousel.min.js
bulma/sass/elements/: _all.sass
bulma/sass/extensions/: _all.sass  bulma-accordion.css  bulma-badge.css  bulma-carousel.css  bulma-carousel.min.css  bulma-carousel.sass  bulma-checkradio.css  bulma-divider.css  bulma-iconpicker.css  bulma-pageloader.css  bulma-pricingtable.css  bulma-quickview.css  bulma-ribbon.css  bulma-slider.css  bulma-steps.css  bulma-switch.css  bulma-tagsinput.css  bulma-timeline.css  bulma-tooltip.css
bulma/templatetags/: django_simple_bulma.py
django_simple_bulma/: apps.py  bulma.sass  css_variables.py  finders.py  settings.py  utils.py
django_simple_bulma/css/: alt_bulma.css  bulma.css  dark_bulma.css  light_bulma.css
django_simple_bulma/js/: bulma-accordion.js  bulma-calendar.js  bulma-carousel.js  bulma-fileupload.js  bulma-iconpicker.js  bulma-navbar-burger.js  bulma-notifications.js  bulma-quickview.js  bulma-slider.js  bulma-steps.js  bulma-tagsinput.js
django_simple_bulma/sass/components/: _all.sass  list.sass
django_simple_bulma/sass/extensions/: _all.sass  _bulma-carousel.sass  _bulma-tooltip.sass  _position.sass
django_simple_bulma/sass/utilities/: _all.sass
django_simple_bulma/templatetags/: django_simple_bulma.py
django_simple_bulma/test_styles/: custom.css
scripts/: github-release.py  save-versions.py
test_static_files/test_styles/: custom.scss
tests/: conftest.py  settings.py  test_bulma1_compatibility.py  test_css_variables.py  test_e2e.py  test_finders.py  test_integration.py  test_templatetags.py  test_utils.py  urls.py
tests/templates/: e2e_page.html
tests/test_static_files/test_styles/: custom.scss
