[tool.poetry]
name = "django-simple-bulma"
version = "1.1.5"
description = "Django application to add the Bulma CSS framework and its extensions"
authors = ["Python Discord <staff@pythondiscord.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=2.0"
libsass = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-bugbear = "^18.8"
flake8-import-order = "^0.18.0"
flake8-tidy-imports = "^2.0"
flake8-todo = "^0.7.0"
flake8-type-annotations = "^0.1.0"
flake8-string-format = "^0.2.3"
pdoc = "^0.3.2"
pre-commit = "^1.14"
PyGithub = "^1.43"
wheel = "^0.33.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
