[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-simple-bulma"
version = "3.0.0"
description = "Django application to add the Bulma CSS framework and its extensions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Python Discord", email = "staff@pythondiscord.com"},
]
maintainers = [
    {name = "Python Discord", email = "staff@pythondiscord.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "Django>=4.2",
    # libsass 0.19-0.22 fail to compile against modern g++ (>=13) due to
    # stricter template hash invocability. 0.23 is the first release that
    # builds on current Ubuntu / CI toolchains.
    "libsass>=0.23",
]

[project.urls]
Homepage = "https://github.com/python-discord/django-simple-bulma"
Repository = "https://github.com/python-discord/django-simple-bulma"
Issues = "https://github.com/python-discord/django-simple-bulma/issues"

[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "pre-commit>=4.0,<5.0",
    "pytest>=8.0,<10.0",
    "pytest-django>=4.5,<5.0",
    "pytest-mock>=3.6,<4.0",
    "coverage[toml]>=7.0,<8.0",
    "pip-audit>=2.7,<3.0",
    "pytest-playwright>=0.5,<1.0",
]

[tool.hatch.build]
include = [
    "django_simple_bulma/**",
]

[tool.hatch.build.targets.wheel]
packages = ["django_simple_bulma"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "django_simple_bulma/bulma",
    "django_simple_bulma/extensions",
    "django_simple_bulma/css",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "D",      # flake8-docstrings
    "I",      # isort
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
]
ignore = [
    # Whitespace around arithmetic operator — matches prior flake8 config
    "E226",

    # Missing docstrings — module, package, magic method, __init__, nested
    "D100", "D104", "D105", "D107",

    # Docstring whitespace preferences
    "D203", "D212", "D214", "D215",

    # Docstring quotes / content that we don't enforce
    "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408",
    "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",

    # Annotation noise: *args, **kwargs, dunder returns
    "ANN002", "ANN003", "ANN204",

    # Module name "django-simple-bulma" has a hyphen because that's the repo
    # directory, not an importable module. False positive.
    "N999",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]

[tool.ruff.lint.isort]
known-first-party = ["django_simple_bulma"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
